# KG_OVERSIGHT

./: .gitignore  ARCHITECTURE_TECHNIQUE.md  AUDIT_DATA_MANAGEMENT.md  BACKLOG.md  BACKLOG_CORRECTIF_PHASE11.md  BACKLOG_DATA_MANAGEMENT.md  CAHIER_DES_CHARGES.md  RELEASE.md  import.cypher  schema.kuzu  transform_to_kuzu.py
.github/workflows/: build.yml  release.yml
app/: README.md  biome.json  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
app/public/data/nodes/: Alerte.csv  DomaineService.csv  EtudeClinique.csv  Evenement.csv  EvenementQualite.csv  KQI.csv  SousTraitant.csv
app/public/data/relations/: AUDIT_DECLENCHE_ALERTE.csv  A_ETE_AUDITE_PAR.csv  A_ETE_SUIVI_PAR.csv  A_POUR_CONTEXTE.csv  CAUSE_EVENEMENT.csv  DECISION_JUSTIFIEE_PAR_FINDING.csv  (+9 more)
app/src/: App.tsx  main.tsx
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src/lib/: animations.ts  utils.ts
app/src/shared/: index.ts
app/src/styles/: colors.ts  globals.css
app/src/types/: modules.d.ts
docs/: AUTO_UPDATE.md
nodes/: AccordQualite.csv  Audit.csv  ContexteReglementaire.csv  Contrat.csv  Decision.csv  EvaluationRisque.csv  Finding.csv  Inspection.csv  KQI.csv  ReunionQualite.csv
relations/: A_ETE_INSPECTE_PAR.csv  A_FAIT_OBJET_EVALUATION.csv  A_VERSION_SUIVANTE.csv  DECISION_JUSTIFIEE_PAR_AUDIT.csv  DECISION_JUSTIFIEE_PAR_INSPECTION.csv  EST_COUVERT_PAR_QA.csv  EST_SOUS_TRAITANT_DE.csv  EVT_CONCERNE_ST.csv  GENERE_FINDING.csv  INSPECTION_GENERE_FINDING.csv  QE_DECLENCHE_ALERTE.csv
(+117 files in other folders)
