[package]
name = "kg-oversight"
version = "0.1.0"
description = "KG-Oversight - Knowledge Graph pour la supervision qualité des sous-traitants"
authors = ["ElegAlex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
